# insight-flow

./: .gitignore  README.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260416_0001_initial_schema.py  20260418_0002_workflow_scoped_clusters.py
backend/app/: main.py
backend/app/api/: deps.py  error_handlers.py  middleware.py
backend/app/api/routes/: document.py  health.py  report.py  source.py  workflow.py  workflow_runs.py
backend/app/api/schemas/: __init__.py  document.py  process.py  report.py  source.py  workflow.py  workflow_runs.py
backend/app/core/: config.py  logging.py
backend/app/db/: enums.py  session.py  types.py
backend/app/services/: __init__.py  analysis_service.py  chunk_service.py  cluster_service.py  context_pack_service.py  dedup_service.py  document_service.py  embedding_service.py  fetch_service.py  ingest_processing_service.py  normalization_service.py  quality_service.py  report_draft_service.py  report_export_service.py  report_service.py  retrieval_service.py  reviewer_service.py  source_service.py  summary_embedding_service.py  workflow_run_service.py  workflow_service.py
backend/app/testing/: __init__.py  cleanup.py
backend/app/workflows/: __init__.py
backend/insight_flow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/runtime_exports/reports/: 20260416_377f4f64-b00e-4f8b-a09a-a1150cf51057.md
backend/scripts/: run_demo_flow.py  run_module_06_validation.py
backend/tests/: conftest.py  test_mvp_integration.py
docs/: README.md
(+57 files in other folders)
